Actualización del sitio web

--- a/biblia-un-anio.html
+++ b/biblia-un-anio.html
@@ -44,6 +44,78 @@
     <p>Para sumarse al plan de lectura de la Biblia en un año hacer <a href="https://bible.com/p/36927500/af208bf98ceac6cadbedddccc3f605a4">click aquí</a>.</p>
     <div class="row contenedor-biblia-un-anio">
       <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 119</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/ZKaaHQUdVCY"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 111</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/49ggVrdBN_Y"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 101</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/jwiKmt9NAfA"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 100</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/OisTpQEle6E"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 99</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/5h7Q0EK-m8I"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 95</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/lq36F3b-S2U"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 94</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/qfMplfJoYA0"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 92</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/_AIvRQj8kHs"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 91</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/A3ifTHYTmMQ"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
         <p class="dia-biblia-un-anio">Día 36</p>
         <iframe class="video-biblia-un-anio"
                 src="https://www.youtube.com/embed/VqVAOqyoKCs"
@@ -52,13 +124,28 @@
                 allowfullscreen></iframe>
       </div>
       <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
-        dia 2
+        <p class="dia-biblia-un-anio">Día 23</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/VdUHlPn_gTM"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
       </div>
       <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
-        dia 3
+        <p class="dia-biblia-un-anio">Día 22</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/H19QkbY4R4o"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
       </div>
       <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
-        dia 4
+        <p class="dia-biblia-un-anio">Día 21</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/K-zhPqcHBlU"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
       </div>
     </div>
     <!--
@@ -70,13 +157,6 @@
         </tr>
       </thead>
       <tr>
-        <td class="dia"><p>36</p></td>
-        <td class="video">
-          <iframe src="https://www.youtube.com/embed/VqVAOqyoKCs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </td>
-      </tr>
-      <!--
-      <tr>
         <td class="dia"><p>35</p></td>
         <td class="video">
           <p><a href="https://app.rightnowmedia.org/es/content/details/357232?session=359297" target="_blank">Parábola de la gran cena.</a><br>
@@ -87,18 +167,6 @@
       </tr>
       -->
       <!--
-      <tr>
-        <td class="dia"><p>23</p></td>
-        <td class="video">
-          <iframe src="https://www.youtube.com/embed/VdUHlPn_gTM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </td>
-      </tr>
-      <tr>
-        <td class="dia"><p>22</p></td>
-        <td class="video">
-          <iframe src="https://www.youtube.com/embed/H19QkbY4R4o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </td>
-      </tr>
       <tr>
         <td class="dia"><p>21</p></td>
         <td class="video">
@@ -170,5 +238,8 @@
       </tr>
     </table>
   -->
+    <footer class="pie-de-pagina">
+      <p>Comunidad Cristiana Laguna Larga &copy;</p>
+    </footer>
   </body>
 </html>
