--- a/preguntas-estudio-8.html
+++ b/preguntas-estudio-8.html
@@ -4,28 +4,28 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>Comunidad Cristiana Laguna Larga</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles-preguntas.css">
         <link rel="icon" href="imagenes/favicon.ico">
     </head>
     <body>
-        <header>
-            <img id="logo" src="imagenes/Logo-CCLL.jpeg" alt="Logo de Comunidad Cristiana Laguna Laguna">
-            <h1>Comunidad Cristiana Laguna Larga</h1>
-        </header>
-        <h2>Conquistando la Depresión y el Enojo</h2>
+        <h1>Conquistando la Depresión y el Enojo - Lección 1</h1>
         <hr>
-        <h3>Recursos:</h3>
-        <!--<figcaption>Escuchar la ponencia aquí 👇</figcaption>-->
-        <audio controls duration>
-            <source src="audio/Depresion-y-Enojo-1.mp3" type="audio/mpeg">
-            <source src="audio/Depresion-y-Enojo-1.ogg" type="audio/ogg">
-            No vas a poder reproducir el audio.
-        </audio>
+        <h2>Recursos:</h2>
+        <div class="video-del-predicador">
+            <iframe title="YouTube video player"
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/t8tUZF9NdiY"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+            </iframe>
+        </div>
         <div class="orador">
-            <h3>Orador:</h3>
+            <h2>Orador:</h2>
             <p>Wally De Smet</p>
         </div>
-        <h3>Preguntas:</h3>
+        <h2>Preguntas:</h2>
         <p>Durante la ponencia, Wally De Smet plantea diferentes casos de depresión de personajes que se hallan en la Biblia, a saber:</p>
         <ul>
             <li>El caso de Elías</li>
@@ -58,5 +58,8 @@
                 ¿Cuáles son las causas físicas de la depresión?
             </li>
         </ol>
+        <footer class="pie-de-pagina">
+            <p>Comunidad Cristiana Laguna Larga</p>
+        </footer>
     </body>
 </html>
