--- a/reuniones.html
+++ b/reuniones.html
@@ -26,10 +26,10 @@
               <li class="nav-item">
                   <a class="nav-link" href="estudios.html">Estudios bíblicos</a>
               </li>
-              <!--
               <li class="nav-item">
                   <a class="nav-link" href="biblia-un-anio.html">La Biblia en un Año</a>
               </li>
+              <!--
               <li class="nav-item">
                   <a class="nav-link" href="#">Adolescentes</a>
               </li>
@@ -41,6 +41,22 @@
       </div>
     </nav>
     <div class="row contenedor-biblia-un-anio">
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">06/03/2021</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/QZaFNnXG2u0"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">27/02/2021</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/DHOEuQzHyVQ?start=1386"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
       <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
         <p class="dia-biblia-un-anio">20/02/2021</p>
         <iframe class="video-biblia-un-anio"
