Actualización por agregado de Lección 6 de Conquistando la Depresión y el Enojo.

--- a/estudios.html
+++ b/estudios.html
@@ -85,7 +85,17 @@
         <hr>
         -->
         <div class="detalle-estudios">
-            <h3>Conquistando la Depresión y el Enojo</h3>
+            <h3>Conquistando la Depresión y el Enojo - Wally De Smet</h3>
+            <p><strong>Descripción:</strong> De vez en cuando, todos sentimos el pesar de la depresión 
+                o el ardor de la ira. Cuando el enojo o la rabia nos dominan, podemos perder el control 
+                y ser muy agresivos o cometer actos de violencia. Es muy importante aprender a 
+                manejar el enojo y evitar las consecuencias físicas y emocionales que aumentan 
+                nuestros problemas y nuestro sufrimiento. Muchos cristianos temen ser catalogados 
+                como poco espirituales si buscan ayuda médica para su depresión. 
+                Pero si no se busca ayuda, la persona puede estar sufriendo sin necesidad. 
+                La depresión puede estar ligada a muchas causas emocionales, físicas o espirituales. 
+                Le proponemos este estudio para tener las armas necesarias para vencer 
+                estas emociones.</p>
             <div class="link-leccion">
                 <a class="leccion" href="preguntas-estudio-8.html" target="_blank">
                     <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
@@ -116,9 +126,67 @@
                     <p>Lección 5</p>
                 </a>
             </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-13.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 6</p>
+                </a>
+            </div>
         </div>
         <div class="detalle-estudios">
-            <h3>Conflictos</h3>
+            <h3>Trayendo calma a mi vida - Nando Goicochea</h3>
+            <p><strong>Descripción:</strong> El Salmo 23 tiene una riqueza maravillosa. 
+                Generalmente leemos este salmo cuando estamos participando de algún funeral. 
+                Pero sabes que este salmo tiene que ver con tu vida interior, con tu alma.
+                Muchos viven hoy sin calma, sin paz, luchando con emociones internas. 
+                Dios desea tratar con tus emociones para que puedas vivir una vida saludable y estable. 
+                Escucha estas enseñanzas que te guiaran a vivir una vida emocionalmente saludable.</p>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-2.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 1</p>
+                </a>
+            </div>
+            <!--
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-9.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 2</p>
+                </a>
+            </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-10.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 3</p>
+                </a>
+            </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-11.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 4</p>
+                </a>
+            </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-12.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 5</p>
+                </a>
+            </div>
+            -->
+        </div>
+        <div class="detalle-estudios">
+            <h3>Conflictos - Doug Fields</h3>
+            <p><strong>Descripción:</strong> ¿Por qué están todos en mi contra? 
+                Los amigos chismean y traicionan. Los padres se la pasan poniendo reglas y sermoneando. 
+                Los profesores y entrenadores tienen alumnos favoritos. Cuando la vida es injusta, 
+                incluso Dios parece ser parte del conflicto. Los estudiantes pueden sentir que todos 
+                están esperando la oportunidad de atacarlos. 
+                En estas cuatro sesiones intensas de estudio bíblico para jóvenes, 
+                los estudiantes comparten abiertamente historias de la vida real sobre los 
+                conflictos que experimentan en sus vidas. 
+                Doug Fields proporciona una perspectiva bíblica sobre las áreas de conflicto 
+                más comunes y enseña a los estudiantes cómo alcanzar la paz y el perdón en sus 
+                relaciones más significativas.</p>
             <h4>Recursos:</h4>
             <p><a href="https://app.rightnowmedia.org/es/content/details/90?session=174516" target="_blank">Conflictos - Doug Fields</a></p>
         </div>
