--- a/preguntas-estudio-2.html
+++ b/preguntas-estudio-2.html
@@ -4,29 +4,26 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>Comunidad Cristiana Laguna Larga</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles-preguntas.css">
         <link rel="icon" href="imagenes/favicon.ico">
     </head>
     <body>
-        <header>
-            <img id="logo" src="imagenes/Logo-CCLL.jpeg" alt="Logo de Comunidad Cristiana Laguna Laguna">
-            <h1>Comunidad Cristiana Laguna Larga</h1>
-        </header>
-        <h2>Trayendo calma a mi vida</h2>
-        <h3>Parte 1: Librándome de la preocupación.</h3>
+        <h1>Trayendo calma a mi vida - Lección 1</h1>
         <hr>
-        <h3>Recursos:</h3>
-        <ul>
-            <li><a href="https://app.rightnowmedia.org/es/content/details/374073" target="_blank">Trayendo calma a mi vida - RightNow Media - Sesión 1: Librándome de la preocupación.</a></li>
-            <li><a href="https://app.rightnowmedia.org/es/content/details/352010" target="_blank">Salmo 23 - Matt Chandler (opcional)</a></li>
-        </ul>
-        <p>También podés verlo directamente desde aquí:</p>
-        <iframe src="https://player.vimeo.com/video/312843889" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-        <hr>
-        <h3>Orador:</h3>
-        <a href="https://app.rightnowmedia.org/es/teacher/1001365" target="_blank">Nando Goicochea</a>
-        <hr>
-        <h3>Preguntas:</h3>
+        <h2>Recursos:</h2>
+        <div class="video-del-predicador">
+            <iframe src="https://player.vimeo.com/video/312843889"
+                    width="640"
+                    height="360"
+                    frameborder="0"
+                    allow="autoplay; fullscreen; picture-in-picture"
+                    allowfullscreen></iframe>
+        </div>
+        <div class="orador">
+            <h2>Orador:</h2>
+            <p>Nando Goicochea</p>
+        </div>
+        <h2>Preguntas:</h2>
         <ol class="preguntas">
             <li>¿Qué beneficios, en lo personal, trae estar saludable en cuerpo, alma y espíritu?</li>
             <!--Se pueden desarrollar buenas relaciones con otros.
@@ -89,5 +86,8 @@
                     <p>Depositen en él toda ansiedad, porque él cuida de ustedes. (1 Pedro 5:7)</p>
                 </blockquote>
         </ol>
+        <footer class="pie-de-pagina">
+            <p>Comunidad Cristiana Laguna Larga &copy;</p>
+        </footer>
     </body>
 </html>
