Agregado de reuniones y videos para la Biblia en un Año.

--- a/biblia-un-anio.html
+++ b/biblia-un-anio.html
@@ -44,6 +44,22 @@
     <p>Para sumarse al plan de lectura de la Biblia en un año hacer <a href="https://bible.com/p/36927500/af208bf98ceac6cadbedddccc3f605a4">click aquí</a>.</p>
     <div class="row contenedor-biblia-un-anio">
       <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 123</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/bCwaJz4L2nU"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 120</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/v0t5OzcBgPY"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
         <p class="dia-biblia-un-anio">Día 119</p>
         <iframe class="video-biblia-un-anio"
                 src="https://www.youtube.com/embed/ZKaaHQUdVCY"
@@ -58,6 +74,26 @@
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 110</p>
+        <iframe class="video-biblia-un-anio"
+                src="https://www.youtube.com/embed/sEhT1mA-HU0"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
+        <p class="dia-biblia-un-anio">Día 102</p>
+        <p><a href="https://app.rightnowmedia.org/es/content/details/449419" target="_blank">Hechos</a>, Leandro Cornou. <strong>RightNow Media</strong>.</p>
+        <hr>
+        <p>El libro de los Hechos, muestra las consecuencias de la resurrección de Jesús y lo que 
+          El Resucitado hace en su iglesia y a través ella.Jesús no quiere que solo admiremos su vida, 
+          él quiere que experimentemos su vida a través de la persona, la presencia y el poder del 
+          Espíritu Santo.<br>
+          Esta es una serie de 28 devocionales, basada en cada capítulo del libro de los Hechos. 
+          A través de ella, veremos la vida de los primeros cristianos y extraeremos principios y 
+          verdades que nos ayudarán a crecer como discípulos de Jesús.</p>
       </div>
       <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
         <p class="dia-biblia-un-anio">Día 101</p>
