--- a/preguntas-estudio-13.html
+++ b/preguntas-estudio-13.html
@@ -56,7 +56,7 @@
                 6. El rey Asuero. Rechazo, ira. La cara es la ventana del alma. Desiciones apuradas.-->
             <li>¿Qué pasa con el enojo guardado durante mucho tiempo?</li>
             <!--Se transforma en resentimiento, venganza y amargura.-->
-            <li>¿Cómo describe al enojo Proverbos 27:4?</li>
+            <li>¿Cómo describe al enojo Proverbios 27:4?</li>
             <li>¿Qué produce la ira reprimida?</li>
         </ol>
         <footer class="pie-de-pagina">
