Actializaciones tras concluir con el estudio de la depresión y el enojo.

--- a/estudios.html
+++ b/estudios.html
@@ -132,6 +132,18 @@
                     <p>Lección 6</p>
                 </a>
             </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-14.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 7</p>
+                </a>
+            </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-15.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 8</p>
+                </a>
+            </div>
         </div>
         <div class="detalle-estudios">
             <h3>Trayendo calma a mi vida - Nando Goicochea</h3>
@@ -145,6 +157,12 @@
                 <a class="leccion" href="preguntas-estudio-2.html" target="_blank">
                     <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
                     <p>Lección 1</p>
+                </a>
+            </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-3.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 2</p>
                 </a>
             </div>
             <!--
