Actualización de la página de inicio y nuevo estudio bíblico: Doctrina de la Salvación.

--- a/estudios.html
+++ b/estudios.html
@@ -40,6 +40,52 @@
                 </ul>
             </div>
         </nav>
+        <div class="detalle-estudios">
+            <h3>Doctrina de la Salvación - Samuel Pérez Millos</h3>
+            <p><strong>Descripción:</strong> La Doctrina de la Salvación nos deja conceptos claros 
+                en cuanto a temas fundamentales para la vida del creyente como Elección, Perdón, 
+                Arrepentimiento, Redención, Justificación y muchos otros que son necesarios repasar 
+                a la luz de las Sagradas Escrituras. Además nuestro hermano nos enseña la materia 
+                con muy buenas aplicaciones para la vida cristiana. ¡No se las pierda!</p>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-16.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 1</p>
+                </a>
+            </div>
+            <!--
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-9.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 2</p>
+                </a>
+            </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-10.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 3</p>
+                </a>
+            </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-11.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 4</p>
+                </a>
+            </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-12.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 5</p>
+                </a>
+            </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-13.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 6</p>
+                </a>
+            </div>
+            -->
+        </div>
         <!--
         <h3 class="titulo-estudio">Dioses que fallan</h3>
         <div class="contenedor-inicio-fin">
@@ -192,6 +238,7 @@
             </div>
             -->
         </div>
+        <!--
         <div class="detalle-estudios">
             <h3>Conflictos - Doug Fields</h3>
             <p><strong>Descripción:</strong> ¿Por qué están todos en mi contra? 
@@ -208,6 +255,7 @@
             <h4>Recursos:</h4>
             <p><a href="https://app.rightnowmedia.org/es/content/details/90?session=174516" target="_blank">Conflictos - Doug Fields</a></p>
         </div>
+        -->
         <footer class="pie-de-pagina">
             <p>Comunidad Cristiana Laguna Larga &copy;</p>
         </footer>
