--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
             </div>
         </nav>
         <!-- Contenedor -->
+        <div class="jumbotron">
+            <h1 class="display-4">¡ATENCIÓN!</h1>
+            <p class="lead">Las reuniones generales de los sábados 22/05, 29/05 y 05/06 serán 
+                virtuales, a través de la plataforma Zoom, a las 21:30 hs.</p>
+            <p>ID de reunión: <strong>844 4920 4066</strong></p>
+            <p>Código de acceso: <strong>734269</strong></p>
+            <a class="btn btn-primary btn-lg" href="https://us02web.zoom.us/j/84449204066?pwd=V0RITUNjN2pIeTBscytYQTdnZFRoQT09" role="button">Acceder a la reunión por Zoom</a>
+            <hr class="my-4">
+        </div>
         <div>
             <p class="somos">Somos una congregación de creyentes pertenecientes a la 
             Iglesia de Jesucristo comprometidos con la misión de predicar 
@@ -54,10 +63,11 @@
         <div class="horarios">
             <section>
                 <h2>Horarios de reunión</h2>
-                <p><strong>Sábado 16:00 - 17:30 hs</strong> (Reunión general)</p>
+                <p><strong>Sábado 21:30 - 23:00 hs</strong> (Reunión general - Modalidad virtual)</p>
                 <p><strong>Sábado 10:30 - 12:00 hs</strong> (Escuela Bíblica - Modalidad virtual)</p>
                 <p><strong>Viernes 21:00 - 22:30 hs</strong> (Reunión de adolescentes - Modalidad virtual)</p>
-                <p><strong>Jueves 21:30 - 23:00 hs</strong> <a href="https://meet.google.com/zsz-ducy-sif" target="_blank">(Reunión de estudio bíblico - Modalidad virtual)</a></p>
+                <p><strong>Jueves 21:30 - 23:00 hs</strong> (Reunión de estudio bíblico - Modalidad virtual)</p>
+                <p><a href="https://us02web.zoom.us/j/84449204066?pwd=V0RITUNjN2pIeTBscytYQTdnZFRoQT09">Todas las reuniones son por Zoom, se puede acceder a las mismas haceiendo click aquí.</a></p>
             </section>
         </div>
         <div>
