--- a/estudios.html
+++ b/estudios.html
@@ -53,6 +53,12 @@
                     <p>Lección 1</p>
                 </a>
             </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-17.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 2</p>
+                </a>
+            </div>
             <!--
             <div class="link-leccion">
                 <a class="leccion" href="preguntas-estudio-9.html" target="_blank">
