Agregado de estudio bíblico (tercero de doctrina de la salvación) y actualización de la página de inicio.

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             </div>
         </nav>
         <!-- Contenedor -->
-        <div class="jumbotron">
+        <div class="anuncio jumbotron">
             <h1 class="display-4">¡ATENCIÓN!</h1>
-            <p class="lead">Las reuniones generales de los sábados 22/05, 29/05 y 05/06 serán 
+            <p class="lead">Las reuniones generales de los sábados 05/06 y 12/06 serán 
                 virtuales, a través de la plataforma Zoom, a las 21:30 hs.</p>
             <p>ID de reunión: <strong>844 4920 4066</strong></p>
             <p>Código de acceso: <strong>734269</strong></p>
