--- a/estudios.html
+++ b/estudios.html
@@ -65,6 +65,24 @@
                     <p>Lección 3</p>
                 </a>
             </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-19.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 4</p>
+                </a>
+            </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-20.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 5</p>
+                </a>
+            </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-21.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Lección 6</p>
+                </a>
+            </div>
             <!--
             <div class="link-leccion">
                 <a class="leccion" href="preguntas-estudio-9.html" target="_blank">
