Estudios basados en los sermones de Sugel Michelen.

--- a/estudios.html
+++ b/estudios.html
@@ -41,6 +41,24 @@
             </div>
         </nav>
         <div class="detalle-estudios">
+            <h3>El evangelio y nuestra unión con Cristo - Sugel Michelén</h3>
+            <p><strong>Descripción:</strong> Este estudio está basado en dos exposiciones dadas por 
+               Sugel Michelén durante el ciclo de conferencias que tuvo lugar en el año 2017 por los 
+               500 años de la reforma.</p>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-22.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>La necesidad urgente de volver al evangelio</p>
+                </a>
+            </div>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-23.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>La doctrina de nuestra unión con Cristo</p>
+                </a>
+            </div>
+        </div>
+        <div class="detalle-estudios">
             <h3>Doctrina de la Salvación - Samuel Pérez Millos</h3>
             <p><strong>Descripción:</strong> La Doctrina de la Salvación nos deja conceptos claros 
                 en cuanto a temas fundamentales para la vida del creyente como Elección, Perdón, 
