Actualización por nuevo horario y estudio bíblico

--- a/estudios.html
+++ b/estudios.html
@@ -41,6 +41,16 @@
             </div>
         </nav>
         <div class="detalle-estudios">
+            <h3>Escoge una: El arte de tomar buenas decisiones - Armando Zuñiga</h3>
+            <p><strong>Descripción:</strong> ¿Cómo podemos tomar una buena decisión? Tenemos tantas opciones, tantos consejos que son conflictivos. ¿Cómo podemos saber lo que Dios quiere para nosotros? ¿Cómo podemos escoger la decisión correcta? En esta serie aprenderemos a estar conectados con Dios, a estar en su perfecta voluntad, a buscarle y a encontrar la sabiduría que solo Él nos puede dar. Acompáñenos y aprenda el arte de tomar buenas decisiones.</p>
+            <div class="link-leccion">
+                <a class="leccion" href="preguntas-estudio-24.html" target="_blank">
+                    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/google/274/memo_1f4dd.png" alt="Emoji de un memo">
+                    <p>Preguntas</p>
+                </a>
+            </div>
+        </div>
+        <div class="detalle-estudios">
             <h3>El evangelio y nuestra unión con Cristo - Sugel Michelén</h3>
             <p><strong>Descripción:</strong> Este estudio está basado en dos exposiciones dadas por 
                Sugel Michelén durante el ciclo de conferencias que tuvo lugar en el año 2017 por los 
