Actualización de página de inicio por vuelta a las reuniones presenciales.

--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
         <div class="horarios">
             <section>
                 <h2>Horarios de reunión</h2>
-                <p><strong>Sábado 16:00 - 17:30 hs</strong> (Reunión general)</p>
-                <p><strong>Sábado 10:30 - 12:00 hs</strong> (Escuela Bíblica - Modalidad virtual)</p>
-                <p><strong>Viernes 21:00 - 22:30 hs</strong> (Reunión de adolescentes - Modalidad virtual)</p>
-                <p><strong>Jueves 21:30 - 23:00 hs</strong> (Reunión de estudio bíblico - Modalidad virtual)</p>
-                <p><a href="https://us02web.zoom.us/j/84449204066?pwd=V0RITUNjN2pIeTBscytYQTdnZFRoQT09">Las reuniones virtuales son por Zoom, se puede acceder a las mismas haceiendo click aquí.</a></p>
+                <p><strong>Sábado 21:30 - 23:00 hs</strong> (Reunión general)</p>
+                <p><strong>Sábado 10:30 - 12:00 hs</strong> (Escuela Bíblica)</p>
+                <p><strong>Viernes 21:00 - 22:30 hs</strong> (Reunión de adolescentes)</p>
+                <p><strong>Jueves 21:30 - 23:00 hs</strong> (Reunión de estudio bíblico)</p>
             </section>
         </div>
         <div>
