Actualizacion de pagina principal y Biblia en un Año

--- a/biblia-un-anio.html
+++ b/biblia-un-anio.html
@@ -23,13 +23,13 @@
               <li class="nav-item">
                   <a class="nav-link" href="index.html">Inicio</a>
               </li>
+              <!--
               <li class="nav-item">
                   <a class="nav-link" href="reuniones.html">Reuniones</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="estudios.html">Estudios Bíblicos</a>
               </li>
-              <!--
               <li class="nav-item">
                   <a class="nav-link" href="#">Adolescentes</a>
               </li>
@@ -40,6 +40,35 @@
           </ul>
       </div>
     </nav>
+    <div class="sumarse-y-suscribirse">
+      <p>
+        Si te interesa sumarte al plan de lectura de la Biblia completa durante 
+        el año 2022, hacé click en el siguiente botón.
+      </p>
+      <a href="https://bible.com/p/47537692/71c5e3605a10d2dabfdc3e19c87f17e9"
+         class="btn btn-outline-primary btn-lg"
+         role="button"
+         data-bs-toggle="button"
+         aria-pressed="true">
+        Sumarme al plan
+      </a>
+    </div>
+    <div class="sumarse-y-suscribirse">
+      <p>
+        Si te interesa recibir material de estudio bíblico durante el 2022, 
+        para reforzar el conocimiento de la Biblia durante la lectura, 
+        hacé click en el siguiente botón para suscribirte al canal de Telegram.<br>
+        También podés bucar el canal en Telegram como <strong>Biblia en un año</strong>.
+      </p>
+      <a href="https://t.me/+g9zt26FMQ_FkZGVh"
+         class="btn btn-outline-primary btn-lg"
+         role="button"
+         data-bs-toggle="button"
+         aria-pressed="true">
+        Suscribirme al canal
+      </a>
+    </div>
+    <!--
     <h2>Videos para acompañar la lectura de la Biblia en un año</h2>
     <p>Para sumarse al plan de lectura de la Biblia en un año hacer <a href="https://bible.com/p/36927500/af208bf98ceac6cadbedddccc3f605a4">click aquí</a>.</p>
     <div class="row contenedor-biblia-un-anio">
@@ -184,7 +213,7 @@
                 allowfullscreen></iframe>
       </div>
     </div>
-    <!--
+    
     <table border="1">
       <thead>
         <tr>
